compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__unknown_type_in_alias.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 917
expression: "type IntMap = IllMap(Int, Int)"
snapshot_kind: text
---
----- SOURCE CODE
type IntMap = IllMap(Int, Int)

----- ERROR
error: Unknown type
  ┌─ /src/one/two.gleam:1:15
  │
1 │ type IntMap = IllMap(Int, Int)
  │               ^^^^^^^^^^^^^^^^

The type `IllMap` is not defined or imported in this module.
