compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__unknown_type_in_alias2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 923
expression: "type IntMap = Map(Inf, Int)"
snapshot_kind: text
---
----- SOURCE CODE
type IntMap = Map(Inf, Int)

----- ERROR
error: Unknown type
  ┌─ /src/one/two.gleam:1:19
  │
1 │ type IntMap = Map(Inf, Int)
  │                   ^^^ Did you mean `Int`?

The type `Inf` is not defined or imported in this module.
