compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__unknown_variable.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 236
expression: x
snapshot_kind: text
---
----- SOURCE CODE
x

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:1:1
  │
1 │ x
  │ ^

The name `x` is not in scope here.
