compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__unknown_variable_2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 251
expression: "case 1 { x -> 1 1 -> x }"
snapshot_kind: text
---
----- SOURCE CODE
case 1 { x -> 1 1 -> x }

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:1:22
  │
1 │ case 1 { x -> 1 1 -> x }
  │                      ^

The name `x` is not in scope here.
