compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__unknown_variable_type.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 241
expression: Int
snapshot_kind: text
---
----- SOURCE CODE
Int

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:1:1
  │
1 │ Int
  │ ^^^

`Int` is a type, it cannot be used as a value.
